# bpf_monitor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  network_monitor.py  prometheus.yml
src/ebpf_monitor/bpf/: ebpf_monitor.bpf.c  ebpf_monitor.bpf.h
src/ebpf_monitor/grpc/: rule_pb2.py  rule_pb2_grpc.py
src/ebpf_monitor/include/: types.h
src/ebpf_monitor/lib/: prog_loader.h  prog_stats.c  prog_stats.h
src/ebpf_nat/: CMakeLists.txt
src/ebpf_nat/src/: main.c
src/ebpf_nat/src/bpf/: ebpf_nat.bpf.c  ebpf_nat.bpf.h
src/ebpf_nat/src/include/: ebpf_nat.h  event_handler.h  macros.h
src/ebpf_nat/src/lib/: ebpf_nat.c  event_handler.c
src/mem_monitor/: CMakeLists.txt  mmap_monitor.bpf.c  mmap_monitor.c
src/net_redirect/: CMakeLists.txt  net_redirect.bpf.c  net_redirect.c  net_redirect.h
src/network_monitor/: CMakeLists.txt  network_monitor.bpf.c  network_monitor.c  network_monitor.h
src/tc_nat/: CMakeLists.txt  setup.sh  tc_nat.bpf.c  tc_nat.c  tc_nat.h
